# inbox-vault

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.example.toml  config.multi-account.example.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: BACKLOG.md  eval.sample.json  ingestion-triage-stream-aware.md  llm-vault-bridge.md  prompting.md  redaction-architecture-v2.md  sota-review.md
docs/assets/: architecture-overview.mmd
reports/: README.md
scripts/: cron_helper.sh  db_inspect.py  debug_profile_llm_io.py  diagnose_index_pipeline.sh  precommit_sensitive_guard.py  print_redaction_table.py  run_build_profiles_weekly_once.sh  run_build_stepwise.sh  run_inbox_sync_once.sh  validate_contracts.py
skills/inbox-vault-local/: SKILL.md
skills/inbox-vault-local/scripts/: iv-cli.sh  (+1 more)
src/inbox_vault/: cli.py  config.py  consolidation.py  db.py  enrich.py  evals.py  gmail_client.py  ingest.py  ingest_triage.py  json_contracts.py  llm.py  profiles.py  prompts.py  redaction.py  redaction_map.py  stress.py  vectors.py
tests/: conftest.py  factories.py  test_cli.py  test_config.py  test_consolidation.py  test_contracts.py  test_cron_helper.py  test_db.py  test_enrich.py  test_evals.py  test_gmail_client_auth.py  test_gmail_payload.py  test_ingest.py  test_ingest_triage.py  test_llm.py  test_packaging_install.py  test_profiles.py  test_prompts.py  test_redaction.py  test_redaction_map.py  test_redaction_persistence.py  test_redaction_upsert.py  test_repo_hygiene.py  test_stress.py  test_update_scope.py  test_vectors.py
(+1 files in other folders)
